	(twittering-send-http-request-urllib): call `url-retrieve' with
	binding `url-http-attempt-keepalives' to nil.

	* twittering-mode.el: The property symbol `belongs-to' is renamed
	`source-spec'.
	(twittering-render-timeline): add `source-spec' to each status
	instead of `belongs-to'.
	(twittering-direct-message): use `source-spec' instead of
	`belongs-to'.
	(twittering-enter): likewise.

2010-11-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix a bug in registration of a sentinel for
	asynchronous retrieval.
	(twittering-url-retrieve-async): fix registration of sentinels to
	avoid registering a sentinel repeatedly.

	* twittering-mode.el: Contents retrieved by url library are copied
	as unibyte string. Without this modification, binary data may be
	retrieved incorrectly.
	(twittering-send-http-request-urllib): copy contents retrieved by
	url library as unibyte string. Without this modification, binary
	data may be retrieved incorrectly.

	* twittering-mode.el: Sentinels for `twittering-send-http-request'
	are called with a process status symbol instead of a process
	status symbol. This is necessary for faking a status of a process
	generated by url library.
	(twittering-send-http-request): call sentinels with a process
	status symbol instead of a process status string.
	(twittering-http-get-default-sentinel): receives `status' instead
	of `status-str'.
	(twittering-http-get-list-index-sentinel): likewise.
	(twittering-http-post-default-sentinel): likewise.
	(twittering-http-get-verify-credentials-sentinel): likewise.
	(twittering-http-get-verify-credentials-clean-up-sentinel):
	likewise.
	(twittering-oauth-get-token-alist): define sentinels so that they
	receive `status' instead of `status-str'.
	(twittering-get-and-render-timeline): likewise.

	* twittering-mode.el: Redisplay tweets with idle timer.
	(twittering-timer-interval-for-redisplaying): change the meaning.
	(twittering-start): `twittering-redisplay-status-on-buffer' is