@@ -5020,6 +5020,29 @@ static char * unplugged_xpm[] = {
     (+ (* (car encoded-time) 65536)
        (cadr encoded-time))))
 
+(defun twittering-make-common-properties (status)
+  "Generate a property list that tweets should have irrespective of format."
+  (apply 'append
+	 (mapcar (lambda (entry)
+		   (let ((prop-sym (if (consp entry) (car entry) entry))
+			 (status-sym (if (consp entry) (cdr entry) entry)))
+		     (list prop-sym (cdr (assq status-sym status)))))
+		 '(id source-id (username . user-screen-name) text))))
+
+(defun twittering-get-common-properties (pos)
+  "Get a common property list of the tweet rendered at POS.
+The common property list is added to each rendered tweet irrespective
+of format. The common properties follows:
+ properites generated by `twittering-make-common-properties',
+ `original-id' added by `twittering-show-replied-statuses',
+ `source-spec' added by `twittering-render-timeline'."
+  (apply 'append
+	 (mapcar (lambda (prop)
+		   (let ((value (get-text-property pos prop)))
+		     (when value
+		       `(,prop ,value))))
+		 '(id original-id source-id source-spec text username))))
+
 (defun twittering-format-string (string prefix replacement-table)
   "Format STRING according to PREFIX and REPLACEMENT-TABLE.
 PREFIX is a regexp. REPLACEMENT-TABLE is a list of (FROM . TO) pairs,
@@ -5263,13 +5286,7 @@ following symbols;
     (cond
      ((null rest)
       `(lambda (status prefix)
-	 (let* ((username (cdr (assq 'user-screen-name status)))
-		(id (cdr (assq 'id status)))
-		(source-id (cdr (assq 'source-id status)))
-		(text (cdr (assq 'text status)))
-		(common-properties
-		 (list 'username username 'id id 'source-id source-id
-		       'text text))
+	 (let* ((common-properties (twittering-make-common-properties status))
 		(str (concat ,@body))
 		(str (if prefix
 			 (replace-regexp-in-string "^" prefix str)
@@ -5313,14 +5330,7 @@ variable `twittering-status-format'."
   (funcall twittering-format-status-function status prefix))
 
 (defun twittering-format-status-for-redisplay (beg end status &optional prefix)
-  (let* ((properties
-	  (and beg
-	       (apply 'append
-		      (mapcar (lambda (prop)
-				(let ((value (get-text-property beg prop)))
-				  (when value
-				    `(,prop ,value))))
-			      '(id original-id)))))
+  (let* ((properties (and beg (twittering-get-common-properties beg)))
 	 (str (twittering-format-status status prefix)))
     ;; Restore properties.
     (when properties
@@ -5379,14 +5389,7 @@ variable `twittering-status-format'."
 				      (length prefix) local-prefix
 				      keep-newline))
 	 (next (next-single-property-change 0 'need-to-be-updated str))
-	 (properties
-	  (and beg
-	       (apply 'append
-		      (mapcar (lambda (prop)
-				(let ((value (get-text-property beg prop)))
-				  (when value
-				    `(,prop ,value))))
-			      '(id text username))))))
+	 (properties (and beg (twittering-get-common-properties beg))))
     ;; Restore properties.
     (when properties
       (add-text-properties 0 (length str) properties str))
